kubernetes/apps/media/qbittorrent/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: qbittorrent.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - qbittorrent.krapulax.dev
  rules:
    - backendRefs:
        - name: qbittorrent
          namespace: media
          port: 8080
